--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~48.0.11",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "native-base": "^3.4.28",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
