--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "styled-components": "^5.3.10",
     "yup": "^1.1.1",
     "react-native-gesture-handler": "~2.9.0"
