--- a/package.json
+++ b/package.json
@@ -11,24 +11,27 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
     "@hookform/resolvers": "^3.1.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.11",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "intl": "^1.2.5",
     "native-base": "^3.4.28",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
-    "react-native": "0.71.6",
+    "react-native": "0.71.7",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-uuid": "^2.0.1",
     "styled-components": "^5.3.10",
-    "yup": "^1.1.1",
-    "react-native-gesture-handler": "~2.9.0"
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
