--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "date-fns": "^2.29.3",
     "expo": "~48.0.11",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
@@ -31,6 +32,7 @@
     "react-native-svg": "13.4.0",
     "react-native-uuid": "^2.0.1",
     "styled-components": "^5.3.10",
+    "victory-native": "^36.6.8",
     "yup": "^1.1.1"
   },
   "devDependencies": {
