--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "date-fns": "^2.29.3",
     "expo": "~48.0.11",
+    "expo-auth-session": "~4.0.3",
     "expo-font": "~11.1.1",
+    "expo-random": "~13.1.1",
     "expo-status-bar": "~1.4.4",
     "intl": "^1.2.5",
     "native-base": "^3.4.28",
