--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-uuid": "^2.0.1",
     "styled-components": "^5.3.10",
     "victory-native": "^36.6.8",
-    "yup": "^1.1.1"
+    "yup": "^1.1.1",
+    "expo-apple-authentication": "~6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
